Create user feed API route
